--- a/index.html
+++ b/index.html
@@ -6,15 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Arena</title>
-    <link rel="stylesheet" href="style.css">
 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <header>
+        <div class="logo bg-primary text-white p-2">
+            <h1 class="ms-2">Phone Arena</h1>
+        </div>
+    </header>
+    <main class="">
+        <h2 class="text-center text-primary container p-5">Search Your Favourite Phone Here</h2>
+        <div class="input-group mb-3 m-auto" id="search-field-group">
+            <input type="text" class="form-control" id="search-field" placeholder="Search for phone's brand"
+                aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-primary ms-2" type="button" id="button-search">Search</button>
+        </div>
+    </main>
 
 
     <!-- script  -->
