--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </header>
     <main class="">
         <h2 class="text-center text-primary container p-5">Search Your Favourite Phone Here</h2>
+        <!-- Search box -->
         <div class="input-group mb-3 m-auto" id="search-field-group">
             <input type="text" class="form-control" id="search-field" placeholder="Search for phone's brand"
                 aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -30,18 +31,14 @@
                 onclick="handleSearch()">Search</button>
         </div>
 
+        <!-- result not found -->
+        <div id="no-result" class="no-result alert alert-danger m-auto">
+            <p class="no-result-text">Sorry...No phone found!</p>
+        </div>
+
         <!-- Display Data  -->
-        <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div class="col">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
+        <div id="search-result" class="row g-4 ms-0 me-0 mt-3 mb-5">
+
         </div>
 
 
