add phone details

--- a/index.html
+++ b/index.html
@@ -36,6 +36,45 @@
             <p class="no-result-text">Sorry...No phone found!</p>
         </div>
 
+        <!-- Phone Details -->
+        <div id="phone-details" class="row g-4 ms-0 me-0 mt-3 mb-5 phone-detals">
+            <div class="col-12 col-lg-4 m-auto">
+                <div class="card">
+                    <img src="" class="card-img-top w-75 m-auto mt-2 details-img" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title phone-title"></h5>
+                        <h6 class="card-brand phone-brand"></h6>
+                        <h6 class="card-release-date"></h6>
+                        <h6 class="card-main-features">Main Features:
+                            <ol>
+                                <li id="chipset"></li>
+                                <li id="displaysize"></li>
+                                <li id="memory"></li>
+                                <li>Sensors:
+                                    <ol id="sensor-id">
+
+                                    </ol>
+                                </li>
+                            </ol>
+                        </h6>
+
+                        <h6 class="card-others mb-3">Others:
+                            <ol>
+                                <li id="bluetooth"></li>
+                                <li id="gps"></li>
+                                <li id="nfc"></li>
+                                <li id="radio"></li>
+                                <li id="usb"></li>
+                                <li id="wlan"></li>
+                            </ol>
+                        </h6>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
         <!-- Display Data  -->
         <div id="search-result" class="row g-4 ms-0 me-0 mt-3 mb-5">
 
