--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Phone Details -->
         <div id="phone-details" class="row g-4 ms-0 me-0 mt-3 mb-5 phone-detals">
             <div class="col-12 col-lg-4 m-auto">
-                <div class="card">
+                <div class="card details-card">
                     <img src="" class="card-img-top w-75 m-auto mt-2 details-img" alt="...">
                     <div class="card-body">
                         <h5 class="card-title phone-title"></h5>
